[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = "Hexlet python project. Level 1"
authors = ["Turbanov Valeriy <tur.4000@gmail.com>"]
license = "MIT"
packages = [
    {include = "brain_games"}
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
